# rs-adv-cache

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  GRAFANA_SETUP.md  METRICS.md  Makefile  README.md  docker-compose.yml  grafana.dashboard.json
.github/workflows/: coverage.yml
api/: swagger.yaml
cfg/: advcache.cfg.yaml
cfg/grafana/dashboards/: advcache-dashboard.json
cfg/otel/: config.yaml
cfg/prometheus/: prometheus.yml
doc/: config.md
src/: lib.rs  main.rs  metrics_runtime.rs
src/app/: app.rs  mod.rs  server.rs
src/config/: mod.rs  test_config.rs
src/controller/: admission.rs  backend.rs  bypass.rs  cache.rs  clear.rs  compression.rs  config.rs  controller.rs  evictor.rs  get.rs  invalidator.rs  lifetimer.rs  metrics.rs  mod.rs  probe.rs  traces.rs
src/db/: db.rs  mod.rs
src/db/admission/: admission.rs  admission_test.rs  count_min_sketch.rs  door_keeper.rs  helper.rs  mod.rs  tiny_lfu.rs  tiny_lfu_test.rs
src/db/log/: logger.rs  mod.rs
src/db/persistance/: dumper.rs  mod.rs
src/db/storage/: eviction.rs  lock.rs  lru.rs  map.rs  mod.rs  mode.rs  queue.rs  refresh.rs  shard.rs  shard_test.rs  storage.rs  storage_test.rs
src/governor/: api.rs  governor.rs  mod.rs  service.rs  transport.rs
src/http/: mod.rs
src/http/client/: hyper_client.rs  mod.rs  tls.rs
src/http/header/: filter.rs  filter_test.rs  mod.rs
src/http/query/: filter.rs  mod.rs  (+1 more)
src/metrics/: code.rs  meter.rs  mod.rs  policy.rs
src/middleware/: compression_middleware.rs  middleware.rs  mod.rs  recover_middleware.rs
src/model/: dump.rs  entry.rs  header.rs  keys.rs  keys_test.rs  mod.rs  payload.rs  payload_decoder.rs  payload_encode_decode_test.rs  payload_encoder.rs  payload_test.rs  query.rs  refresh.rs  refresh_test.rs  rule.rs  timestamps.rs  timestamps_test.rs  to_bytes.rs
src/shutdown/: mod.rs
src/storage/: dumper.rs  mod.rs  storage.rs
src/tests/: README.md  cases_admin_endpoints_test.rs  cases_brackets_canonicalization_test.rs  cases_cache_behavior_test.rs  cases_cache_test.rs  cases_concurrent_test.rs  cases_error_handling_test.rs  cases_integration_test.rs  cases_invalidation_test.rs  cases_key_isolation_test.rs  cases_order_and_negative_test.rs  cases_percent_encoding_test.rs  cases_proxy_test.rs  cases_whitelist_test.rs  cases_workers_test.rs  e2e.rs  mod.rs
src/traces/: mod.rs  tracer.rs
src/upstream/: backend.rs  backend_headers.rs  backend_hyper_impl.rs  backend_hyper_impl_test.rs  copy.rs  mod.rs  probe.rs  proxy.rs  proxy_test.rs  sanitize.rs  trace.rs  upstream.rs
src/workers/: backend.rs  config.rs  mod.rs
(+63 files in other folders)
