[package]
name = "advcache"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "advcache"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7" }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
humantime = "2.1"

# HTTP server
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["compression-gzip", "compression-br", "trace", "timeout"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time utilities
chrono = "0.4"

# Concurrency
dashmap = "5.0"
parking_lot = "0.12"

# Compression
flate2 = "1.0"
brotli = "3.4"

# CRC32 checksum
crc32fast = "1.3"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Metrics (Prometheus/VictoriaMetrics compatible)
metrics = "0.21"
metrics-prometheus = "0.6"
metrics-exporter-prometheus = "0.6"

# OpenTelemetry
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# Rate limiting
governor = "0.6"
nonzero = "0.1"
urlencoding = "2.1"
url = "2.5"
# HTTP client with fine-grained connection pool control
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["rustls-native-certs", "http1", "http2"] }
http-body-util = "0.1"
httparse = "1.8"

# Random number generation
rand = "0.8"
hex = "0.4"

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
num_cpus = "1.16"
regex = "1.10"
ctor = "0.2"
libc = "0.2"

# YAML duration parsing
serde_with = { version = "3.0", features = ["chrono"] }
humantime-serde = "1"

# Binary encoding/decoding
byteorder = "1.5"
bytes = "1.5"

# Async streams
futures = "0.3"
async-trait = "0.1"

# Atomic Arc swapping for payload updates
arc-swap = "1.7"

# TLS support
rustls = "0.21"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
rustls-native-certs = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sha1 = "0.10"
hex = "0.4"
url = "2.5"
reqwest = { version = "0.11", features = ["json", "gzip"] }
flate2 = "1.0"
tokio-test = "0.4"